<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/congratulation_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="#FAFAFA"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <com.samplecodeapp.widgets.TitleBoldTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/alert_internet_alert"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/dotted" />

                <com.samplecodeapp.widgets.TitleRegularTextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/check_internet_connection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/read_cancel"
                        style="@style/ButtonBlueWithWeight"
                        android:layout_width="0dp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:text="@string/btn_cancel"
                        app:iconGravity="textStart"
                        app:rippleColor="@color/ripple_color" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/read_btn"
                        style="@style/ButtonBlueWithWeight"
                        android:layout_width="0dp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:text="@string/btn_ok"
                        app:iconGravity="textStart"
                        app:rippleColor="@color/ripple_color" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/dialogue_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal|top"
            android:background="@drawable/app_logo"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/app_logo"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>